[gd_scene load_steps=2 format=1]

[ext_resource path="res://todos/item_view.gd" type="Script" id=1]

[node name="Item" type="HBoxContainer"]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
rect/min_size = Vector2( 980, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 1024.0
margin/top = 300.0
margin/right = 51.0
margin/bottom = 276.0
custom_constants/separation = 10
alignment = 0
script/script = ExtResource( 1 )

[node name="check" type="CheckBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 26.0
margin/bottom = 24.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="input" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 36.0
margin/top = 0.0
margin/right = 951.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="btn_del" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 961.0
margin/top = 0.0
margin/right = 980.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "x"
flat = false

[connection signal="toggled" from="check" to="." method="_on_toggled"]

[connection signal="text_changed" from="input" to="." method="_on_text_changed"]

[connection signal="pressed" from="btn_del" to="." method="_on_del"]


